--- a/demo-app/pom.xml
+++ b/demo-app/pom.xml
@@ -12,6 +12,34 @@
   <name>demo-app</name>
 
   <dependencies>
+    <dependency>
+      <groupId>com.example</groupId>
+      <artifactId>demo-api</artifactId>
+      <version>${revision}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openapitools</groupId>
+      <artifactId>jackson-databind-nullable</artifactId>
+      <version>0.2.6</version>
+    </dependency>
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+     <version>1.18.30</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
+<!--    <dependency>-->
+<!--      <groupId>org.assertj</groupId>-->
+<!--      <artifactId>assertj-core</artifactId>-->
+<!--      <version>3.25.1</version>-->
+<!--      <scope>test</scope>-->
+<!--    </dependency>-->
+
   </dependencies>
 
   <build>
