--- a/demo-app/pom.xml
+++ b/demo-app/pom.xml
@@ -27,11 +27,16 @@
       <artifactId>h2</artifactId>
       <scope>runtime</scope>
     </dependency>
-    <dependency>
-      <groupId>org.projectlombok</groupId>
-      <artifactId>lombok</artifactId>
-     <version>1.18.30</version>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.projectlombok</groupId>-->
+<!--      <artifactId>lombok</artifactId>-->
+<!--     <version>1.18.30</version>-->
+<!--    </dependency>-->
+<!--    <dependency>-->
+<!--      <groupId>org.mapstruct</groupId>-->
+<!--      <artifactId>mapstruct</artifactId>-->
+<!--      <version>1.5.5.Final</version>-->
+<!--    </dependency>-->
     <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
 <!--    <dependency>-->
 <!--      <groupId>org.assertj</groupId>-->
