--- a/demo-app/src/main/resources/application.yml
+++ b/demo-app/src/main/resources/application.yml
@@ -8,3 +8,6 @@ spring:
     spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
   h2:
     console.enabled: true
+hibernate:
+  hbm2ddl:
+    auto: update
