--- a/.github/workflows/master-catatest(production).yml
+++ b/.github/workflows/master-catatest(production).yml
@@ -9,6 +9,10 @@ on:
       - master
   workflow_dispatch:
 
+permissions:
+      id-token: write
+      contents: read
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -42,6 +46,19 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: java-app
+      - name: Azure login
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+  
+      - name: Azure CLI script
+        uses: azure/CLI@v1
+        with:
+          azcliversion: latest
+          inlineScript: |
+            az account show
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
