--- a/.github/workflows/master_catatest.yml
+++ b/.github/workflows/master_catatest.yml
@@ -62,7 +62,7 @@ jobs:
       - name: Build and push image
         id: build-image
         run: |
-         az acr build --image ${{ secrets.REGISTRY_LOGIN_SERVER }}/customer-data-management:${{ github.sha }} --registry ${{ secrets.REGISTRY_LOGIN_SERVER }} --file "Dockerfile" .
+         az acr build --image ${{ secrets.REGISTRY_LOGIN_SERVER }}/customer-data-management:${{ github.sha }} --registry ${{ secrets.REGISTRY_LOGIN_SERVER }} .
       
       - name: 'Deploy to Azure Container Instances'
         uses: 'azure/aci-deploy@v1'
