--- a/.github/workflows/master_catatest.yml
+++ b/.github/workflows/master_catatest.yml
@@ -59,25 +59,25 @@ jobs:
           app-name: 'catatest'
           slot-name: 'Production'
           package: '*.jar'
-      - name: Log into registry
-        uses: docker/login-action@v1
+      - name: 'Build and push image'
+        uses: azure/docker-login@v1
         with:
-          registry: ${{ secrets.REGISTRY_LOGIN_SERVER }}
+          login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
-      - name: Build and push image
-        id: build-image
-        run: |
-         az acr build --image ${{ secrets.REGISTRY_LOGIN_SERVER }}/customerdm:${{ github.sha }} --registry ${{ secrets.REGISTRY_LOGIN_SERVER }}      
+      - run: |
+          docker build . -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/customer-data-management:${{ github.sha }}
+          docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/customer-data-management:${{ github.sha }}
+      
       - name: 'Deploy to Azure Container Instances'
         uses: 'azure/aci-deploy@v1'
         with:
-         resource-group: ${{ secrets.RESOURCE_GROUP }}
-         dns-name-label: ${{ secrets.RESOURCE_GROUP }}${{ github.run_number }}
-         image: ${{ secrets.REGISTRY_LOGIN_SERVER }}/customerdm:${{ github.sha }}
-         registry-login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
-         registry-username: ${{ secrets.REGISTRY_USERNAME }}
-         registry-password: ${{ secrets.REGISTRY_PASSWORD }}
-         name: customerdm
-         location: 'west eu'
+          resource-group: ${{ secrets.RESOURCE_GROUP }}
+          dns-name-label: ${{ secrets.RESOURCE_GROUP }}${{ github.run_number }}
+          image: ${{ secrets.REGISTRY_LOGIN_SERVER }}/customer-data-management:${{ github.sha }}
+          registry-login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
+          registry-username: ${{ secrets.REGISTRY_USERNAME }}
+          registry-password: ${{ secrets.REGISTRY_PASSWORD }}
+          name: customerdm
+          location: 'west eu'
 
