--- a/.github/workflows/master_catatest.yml
+++ b/.github/workflows/master_catatest.yml
@@ -64,6 +64,8 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: '17'
+      - run: |
+          mvn clean install
       - name: 'Build and push image'
         uses: azure/docker-login@v1
         with:
