--- a/.github/workflows/master_catatest.yml
+++ b/.github/workflows/master_catatest.yml
@@ -77,7 +77,8 @@ jobs:
         with:
           push: true
           tags: ${{ secrets.REGISTRY_LOGIN_SERVER }}/customer-data-management:${{ github.sha }}
-          file: Dockerfile
+          file: client-data-management/client-data-management/Dockerfile
+          #/home/runner/work/client-data-management/client-data-management/demo-app/target/demo-app-1.0.0-SNAPSHOT.jar
       # - run: |
       #     mvn clean install
       #     docker build . -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/customer-data-management:${{ github.sha }}
