CDM-27 Add transactionality scopes with optimistic locking

--- a/demo-api/src/main/resources/api.yaml
+++ b/demo-api/src/main/resources/api.yaml
@@ -45,7 +45,7 @@ paths:
           description: The customer id is not known to the system
   /customer/find:
     get:
-      summary: Returns filtered list by first_name or last_name (or both).
+      summary: Returns filtered list by case-insensitive partial first_name or last_name (or both).
       description:
       parameters:
         - in: query
