CDM-29 Improve customer data validations

--- a/demo-app/src/main/resources/application.yml
+++ b/demo-app/src/main/resources/application.yml
@@ -11,3 +11,10 @@ spring:
 hibernate:
   hbm2ddl:
     auto: update
+
+restrictions:
+  customer:
+    min:
+      age: 18
+    birthdate:
+      format: dd-MM-yyyy
