--- a/demo-app/src/test/resources/application.yml
+++ b/demo-app/src/test/resources/application.yml
@@ -6,3 +6,10 @@ spring:
     driverClassName: org.h2.Driver
   jpa:
     spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
+
+restrictions:
+  customer:
+    min:
+      age: 18
+    birthdate:
+      format: dd-MM-yyyy
